# Narratave_backend

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  build.sh  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  vercel.json
Narratave/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
Narratave/middleware/: camelcase.py
Narratave/scripts/: populate_dashboard.py
Podsack/: .env  asgi.py  httpclient.py  manage.py  settings.py  urls.py  wsgi.py
Podsack/Podsack/: settings.py
Podsack/authentication/: customauth.py  models.py  urls.py  utils.py
Podsack/decorators/: singleton.py
Podsack/middleware/: camelcase.py
Podsack/scripts/: populate_dashboard.py
activity/: models.py  utils.py
activity/migrations/: 0001_initial.py
authentication/: admin.py  apps.py  customauth.py  middlewares.py  models.py  utils.py
authentication/migrations/: 0001_initial.py  0002_remove_user_country_user_username.py  0003_remove_user_unique_email_per_role_remove_user_role.py  0004_alter_user_email.py
authentication/utils/: auth_utils.py  http_clients.py
authentication/v1/: serializers.py  urls.py  views.py
follows/: models.py
follows/migrations/: 0001_initial.py
follows/v1/: serializer.py  service.py  urls.py  views.py
mediacontent/: admin.py  apps.py  constants.py  models.py  signals.py  utils.py
playback/: admin.py  constants.py  models.py  utils.py
scripts/: populate_dashboard.py  update_podcast_audio_file_name.py
search/: models.py
usercollection/: apps.py  models.py  utils.py
userprofile/: admin.py  models.py
(+59 files in other folders)
